--- a/home/wiki/App/Search/Score.html
+++ b/home/wiki/App/Search/Score.html
@@ -107,13 +107,17 @@
       The following formula is the basis for scaling:
     </p>
     <p>
-      <span id='xowa_math_txt_0'>newScore = \frac{oldScore - \text{min}(oldRange)} {\text{max}(oldRange)-\text{min}(oldRange)} \cdot (\text{max}(newRange)-\text{min}(newRange))</span>
+      <span id='xowa_math_txt_0'>
+newScore = \frac{oldScore - \text{min}(oldRange)} {\text{max}(oldRange)-\text{min}(oldRange)} \cdot (\text{max}(newRange)-\text{min}(newRange))
+</span>
     </p>
     <p>
       Or, to use the example from above:
     </p>
     <p>
-      <span id='xowa_math_txt_0'>250 = \frac{100 - 0} {400-0} \cdot (1000-0)</span>
+      <span id='xowa_math_txt_0'>
+250 = \frac{100 - 0} {400-0} \cdot (1000-0)
+</span>
     </p>
     <h3>
       <span class="mw-headline" id="Ranking">Ranking</span>
