--- a/home/wiki/App/Xtn/Mediawiki/Math/Setup.html
+++ b/home/wiki/App/Xtn/Mediawiki/Math/Setup.html
@@ -104,7 +104,7 @@
     </h2>
     <ul>
       <li>
-        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_6" title="Diagnostics/Math">Diagnostics/Math</a>
+        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_6" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
       </li>
     </ul>
     <h2>
