--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -46,7 +46,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Reference_tooltips.html" id="xolnki_8" title="Diagnostics/Javascript/Reference tooltips">Diagnostics/Javascript/Reference_tooltips</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math">Diagnostics/Math</a> (currently via MathJax)
+            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a> (currently via MathJax)
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Timeline.html" id="xolnki_10" title="Diagnostics/Javascript/Timeline">Diagnostics/Javascript/Timeline</a>
