--- a/home/wiki/Diagnostics/Math.html
+++ b/home/wiki/Diagnostics/Math.html
@@ -37,19 +37,22 @@
         Ampersand.literal
       </dt>
       <dd>
-        <span id='xowa_math_txt_0'>x \&amp; y</span>
+        <span id='xowa_math_txt_0'>x \& y</span>
       </dd>
       <dt>
         Ampersand.formatting
       </dt>
       <dd>
-        <span id='xowa_math_txt_0'>\begin{bmatrix} 1 &amp; 2 \\ 3 &amp; 4 \end{bmatrix}</span>
+        <span id='xowa_math_txt_0'>\begin{bmatrix}
+1 & 2 \\
+3 & 4 \end{bmatrix}
+</span>
       </dd>
       <dt>
         Quote.literal
       </dt>
       <dd>
-        <span id='xowa_math_txt_0'>a " b</span>
+        <span id='xowa_math_txt_0'>a &quot; b </span>
       </dd>
     </dl>
   
