--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          3.11.2.3 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log">view changes</a>)</b>
+          3.12.1.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -54,7 +54,7 @@
           build_date:
         </td>
         <td>
-          2016-10-28 15:33
+          2016-12-02 00:44
         </td>
       </tr>
       <tr>
