--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -88,27 +88,24 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.11.2.1 features the following
+      v3.12.1.1 features the following
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2016-10 French, Polish, Swedish, Spanish wikis. Also, 2016-11 English Wikipedia
+        (Wiki) Publish 2016-11 Dutch and Russian wikis. Also, 2016-11 German Wikipedia
       </li>
       <li>
-        (PC) Fix regression errors, including bookmarks, variants, clicking on images, and wrong number of reported pages
+        (PC) Fix "stalled" English Wikipedia import on older machines
       </li>
       <li>
-        (PC) Fix various minor Wikibase errors with geocoordinate, time, and quantity
+        (PC) Fix various minor Scribunto and Wikibase errors with Russian Wikipedia including inferred datatype.
       </li>
       <li>
-        (PC) Make minor changes to Import/Offline page
-      </li>
-      <li>
-        (Dev) Simplify usage of XOWA as an embeddable parser
+        (PC) Fix page sync issues when syncing File or Chinese pages with math
       </li>
     </ul>
     <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
@@ -197,7 +194,7 @@
     </h5>
     <ul>
       <li>
-        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
+        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline" class="xowa-visited">import offline</a>.
       </li>
     </ul>
     <h5>
@@ -222,7 +219,7 @@
     </h5>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_15" title="Wiki setup/Listing">Wiki_setup/Listing</a>
+        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_15" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
       </li>
       <li>
         Navigate to your wiki page from the list
@@ -235,7 +232,7 @@
       <span class="mw-headline" id="Upgrade_users">Upgrade users</span>
     </h2>
     <p>
-      If you are upgrading from any version before v3.10.1, you should download a xowa_app_v3.10.1+ file.
+      If you are upgrading from any version before v3.12.1, you should download a xowa_app_v3.12.1+ file.
     </p>
     <ul>
       <li>
@@ -370,12 +367,12 @@
           <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_34" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
-          Import a wiki from a list of 828 known Wikimedia Foundation wikis
+          Import a wiki from a list of 829 known Wikimedia Foundation wikis
         </td>
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_35" title="Dashboard/Import/Offline">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_35" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
@@ -423,7 +420,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log" class="xowa-visited">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
