--- a/home/wiki/Wiki_setup/Listing.html
+++ b/home/wiki/Wiki_setup/Listing.html
@@ -34,22 +34,28 @@
         <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_5" title="Wiki setup/French wikis">Wiki setup/French wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_6" title="Wiki setup/Spanish wikis">Wiki setup/Spanish wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Russian_wikis.html" id="xolnki_6" title="Wiki setup/Russian wikis">Wiki setup/Russian wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_7" title="Wiki setup/Polish wikis">Wiki setup/Polish wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Dutch_wikis.html" id="xolnki_7" title="Wiki setup/Dutch wikis">Wiki setup/Dutch wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_8" title="Wiki setup/Swedish wikis">Wiki setup/Swedish wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_8" title="Wiki setup/Spanish wikis">Wiki setup/Spanish wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Czech_wikis.html" id="xolnki_9" title="Wiki setup/Czech wikis">Wiki setup/Czech wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_9" title="Wiki setup/Polish wikis">Wiki setup/Polish wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Haitian_wikis.html" id="xolnki_10" title="Wiki setup/Haitian wikis">Wiki setup/Haitian wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_10" title="Wiki setup/Swedish wikis">Wiki setup/Swedish wikis</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Wiki_setup/Afrikaans_wikis.html" id="xolnki_11" title="Wiki setup/Afrikaans wikis">Wiki setup/Afrikaans wikis</a>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Czech_wikis.html" id="xolnki_11" title="Wiki setup/Czech wikis">Wiki setup/Czech wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Haitian_wikis.html" id="xolnki_12" title="Wiki setup/Haitian wikis">Wiki setup/Haitian wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Afrikaans_wikis.html" id="xolnki_13" title="Wiki setup/Afrikaans wikis">Wiki setup/Afrikaans wikis</a>
       </li>
     </ul>
   
