--- a/home/wiki/App/Xtn/Mediawiki/Math/Latex/Linux.html
+++ b/home/wiki/App/Xtn/Mediawiki/Math/Latex/Linux.html
@@ -106,7 +106,7 @@
     </h2>
     <ul>
       <li>
-        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_4" title="Diagnostics/Math">Diagnostics/Math</a>
+        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_4" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
       </li>
     </ul>
   
