--- a/home/wiki/App/Xtn/Mediawiki/Math/Latex/Windows.html
+++ b/home/wiki/App/Xtn/Mediawiki/Math/Latex/Windows.html
@@ -56,7 +56,7 @@
     </h2>
     <ul>
       <li>
-        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_3" title="Diagnostics/Math">Diagnostics/Math</a>
+        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_3" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
       </li>
       <li>
         Wait a few seconds. You will get a MikTeX prompt to download another repository. Specifically:
