--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -2945,7 +2945,7 @@
         Parser.Toc: Parse link inside xml node (affects page not loading); EX:== &lt;i&gt;[[A]]&lt;/i&gt; ==. See: <a href="https://pl.wiktionary.org/wiki/head_sth_off" rel="nofollow" class="external free">https://pl.wiktionary.org/wiki/head_sth_off</a>
       </li>
       <li>
-        Math: Escape &lt;, &gt;, &amp;, and " {detected by Schnark}. See: <a href="https://de.wikipedia.org/wiki/Vergleich_(Zahlen)" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Vergleich_(Zahlen)</a> <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_74" title="Diagnostics/Math">Diagnostics/Math</a>
+        Math: Escape &lt;, &gt;, &amp;, and " {detected by Schnark}. See: <a href="https://de.wikipedia.org/wiki/Vergleich_(Zahlen)" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Vergleich_(Zahlen)</a> <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_74" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
       </li>
       <li>
         Wikisource.Page: Parse " in title (and other html numeric character references). See: <a href="https://pl.wikisource.org/wiki/Zarządzenie_Nr_11_Ministra_Finansów_z_dnia_21_lipca_2008_r._w_sprawie_ustanowienia_„Dnia_Skarbowości”" rel="nofollow" class="external free">https://pl.wikisource.org/wiki/Zarządzenie_Nr_11_Ministra_Finansów_z_dnia_21_lipca_2008_r._w_sprawie_ustanowienia_„Dnia_Skarbowości”</a>
@@ -3791,7 +3791,7 @@
         Lang: Fix broken zh-hant; EX:/user/anonymous/lang/xowa/zh-hant.gfs. See: <a href="http://commons.wikimedia.org/wiki/Category:Mona_Lisa" rel="nofollow" class="external free">http://commons.wikimedia.org/wiki/Category:Mona_Lisa</a>
       </li>
       <li>
-        Gui: Change message box prompt from "yes" to "ok" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_82" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Gui: Change message box prompt from "yes" to "ok" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_82" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
     </ul>
     <p>
@@ -3915,7 +3915,7 @@
     </p>
     <ul>
       <li>
-        Import.Script: Change "Uncompress" default from "uncompress" to "read from compressed file" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_88" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Import.Script: Change "Uncompress" default from "uncompress" to "read from compressed file" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_88" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Options: Fix file selector button not working for "Import bz2 by stdout process" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_89" title="Options/Import">Options/Import</a>
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4321,7 +4321,7 @@
     </p>
     <ul>
       <li>
-        Import: Set search to v2 (not v1) when importing with category v2 {detected by Miles; Anselm; Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_100" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Import: Set search to v2 (not v1) when importing with category v2 {detected by Miles; Anselm; Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_100" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui.Url_bar: Fix shortcuts for wd.p and wd.q; EX:wd.q:2 -&gt; www.wikidata.org/wiki/Q2. [broken since:v1.1.4.1]
