--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-12-04</b> 2016-11 Dutch and Russian wikis released. Also, 2016-11 German Wikipedia <br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">Dutch wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_ruwiki_latest" class="external text" rel="nofollow">Russian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
+    </li>
+  </ul>
+
   <b>2016-11-13</b> 2016-10 French, Polish, Swedish, Spanish wikis released. Also, 2016-11 English Wikipedia <br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
