--- a/home/wiki/App/Xtn/Page_sync.html
+++ b/home/wiki/App/Xtn/Page_sync.html
@@ -119,7 +119,7 @@
         Wikimedia generates offline Wikitext dumps twice per month. See <a href="https://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">https://dumps.wikimedia.org/backup-index.html</a>
       </li>
       <li>
-        XOWA generates HTML dumps once per month. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
+        XOWA generates HTML dumps once per month. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
       </li>
     </ul>
     <p>
