--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -824,7 +824,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_15" title="Options/Dev">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_15" title="Options/Dev" class="xowa-visited">Options/Dev</a>
       </dd>
     </dl>
     <p>
@@ -1422,7 +1422,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_25" title="Options/Shortcuts">Options/Shortcuts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_25" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </dd>
     </dl>
     <ul>
@@ -2166,7 +2166,7 @@
         <span style='font-variant:small-caps'>Example</span>: xowa.api.addon.bldr.central.log_verbose = 'y';.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_36" title="Options/Config script">Options/Config_script</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_36" title="Options/Config script" class="xowa-visited">Options/Config_script</a>
       </dd>
     </dl>
     <ul>
@@ -2222,7 +2222,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_37" title="Options/Import">Options/Import</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_37" title="Options/Import" class="xowa-visited">Options/Import</a>
       </dd>
     </dl>
     <ul>
