--- a/home/wiki/Change_log/v3.11.2.1.html
+++ b/home/wiki/Change_log/v3.11.2.1.html
@@ -286,7 +286,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev" class="xowa-visited">Options/Dev</a>
       </dd>
     </dl>
     <p>
