--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -260,10 +260,10 @@
           en.wikinews.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
-          2016-10-01
+          1969-12-31
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -272,13 +272,13 @@
           Dump complete
         </td>
         <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
+          xdat
         </td>
         <td class='cell_center'>
           v1
+        </td>
+        <td class='cell_center'>
+          v2
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikinews.org")'>Import</button>
@@ -332,7 +332,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-11-01
+          2016-12-02
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -959,7 +959,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-10-20
+          2016-11-01
         </td>
         <td class='cell_center'>
           2016-10-01
