--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -110,6 +110,9 @@
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
     </p>
+    <p>
+      <br>
+    </p>
     <h2>
       <span class="mw-headline" id="New_users">New users</span>
     </h2>
@@ -202,7 +205,7 @@
     </h5>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
+        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
       </li>
       <li>
         Add your wikis to the Queue
@@ -228,6 +231,9 @@
         Download the listed urls
       </li>
     </ul>
+    <p>
+      <br>
+    </p>
     <h2>
       <span class="mw-headline" id="Upgrade_users">Upgrade users</span>
     </h2>
@@ -239,7 +245,7 @@
         v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_16" title="App/Category">Category Overview</a>
       </li>
       <li>
-        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_17" title="Special:XowaDownloadCentral">Download Central</a>
+        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_17" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
       </li>
       <li>
         v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_18" title="App/Search">App/Search</a>
@@ -300,7 +306,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML" class="xowa-visited">Options/HTML</a>
           </li>
         </ul>
       </li>
@@ -336,7 +342,7 @@
     </dl>
     <ul>
       <li>
-        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_31" title="Options">Options</a>
+        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_31" title="Options" class="xowa-visited">Options</a>
       </li>
       <li>
         <b>Right-click</b>: Right click on an image and click save as file
@@ -356,7 +362,7 @@
     <table class="wikitable">
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_33" title="Special:XowaDownloadCentral">Download Central</a>
+          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_33" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
         </td>
         <td>
           Download an Android-ready wiki with images from archive.org
@@ -412,7 +418,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_40" title="Options">Options</a>
+          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_40" title="Options" class="xowa-visited">Options</a>
         </td>
         <td>
           Configure XOWA options
