--- a/home/wiki/Wiki_setup/English_wikis.html
+++ b/home/wiki/Wiki_setup/English_wikis.html
@@ -239,7 +239,7 @@
     </h3>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
+        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
       </li>
       <li>
         In the <b>Available</b> table, add any of the following task names
