--- a/home/wiki/App/Databases/Overview.html
+++ b/home/wiki/App/Databases/Overview.html
@@ -113,7 +113,7 @@
         HTML databases will have <code>-html-</code> in the file name. For example, <code>en.wikipedia.org-html.xowa</code>
       </li>
       <li>
-        Users can generate this HTML database using <a href="http://xowa.org/home/wiki/Dev/Command-line/Thumbs.html" id="xolnki_4" title="Dev/Command-line/Thumbs">Dev/Command-line/Thumbs</a>. However, for most users, they will just download the already-generated HTML databases from <a href="http://archive.org" rel="nofollow" class="external free">http://archive.org</a> through <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_5" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
+        Users can generate this HTML database using <a href="http://xowa.org/home/wiki/Dev/Command-line/Thumbs.html" id="xolnki_4" title="Dev/Command-line/Thumbs">Dev/Command-line/Thumbs</a>. However, for most users, they will just download the already-generated HTML databases from <a href="http://archive.org" rel="nofollow" class="external free">http://archive.org</a> through <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_5" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
       </li>
       <li>
         HTML databases have only been supported recently (as of 2016-06). As such, they are missing a small percentage of functionality. The most significant piece of that functionality is Popups, but there may be other features.
