--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -445,7 +445,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest">Options/Search_suggest</a>
+        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
       </li>
       <li>
         (add) Scribunto: Fixed "Citation needed" for 2013-12-04 English Wikipedia; EX:mw.isSubsting. See: <a href="http://en.wikipedia.org/wiki/Albedo" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Albedo</a>
@@ -454,10 +454,10 @@
         (add) Html: Embed file name / width / height in HTML.
       </li>
       <li>
-        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
+        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
-        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
+        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
     </ul>
     <p>
@@ -553,7 +553,7 @@
         (change) Log: Added redlink logging statements.
       </li>
       <li>
-        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script">Options/Config_script</a>.
+        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script" class="xowa-visited">Options/Config_script</a>.
       </li>
       <li>
         (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
@@ -800,7 +800,7 @@
         (done) Search: Search allows manually specifying additional namespaces.
       </li>
       <li>
-        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest">Options/Search_suggest</a>
+        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
       </li>
       <li>
         (fix) [broken since:v0.7.3] Import: Import fails if data_storage_format is not .gz.
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -937,7 +937,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import">Options/Import</a>
+        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1099,7 +1099,7 @@
     </p>
     <ul>
       <li>
-        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus">Options/Menus</a>
+        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus" class="xowa-visited">Options/Menus</a>
       </li>
       <li>
         (add) Addon: Addon can automatically redirect http: to xowa: when offline {contributed by treck}.
@@ -1167,10 +1167,10 @@
         (add) Addon: Wikidata JSON formatter works for addon.
       </li>
       <li>
-        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Options/Search_suggest</a>
+        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
       </li>
       <li>
-        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import">Options/Import</a>
+        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <h2>
@@ -1216,7 +1216,7 @@
         (done) Menu: Added View commands for page_read, page_edit, page_html {requested by hidp123}.
       </li>
       <li>
-        (done) Options: "Clear customized options" link added {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_26" title="Options">Options</a>
+        (done) Options: "Clear customized options" link added {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_26" title="Options" class="xowa-visited">Options</a>
       </li>
       <li>
         (done) Offline files: Builder now generates a list of all thumbs to be downloaded. See: <a href="http://xowa.org/home/wiki/Dev/Design/Offline_files.html" id="xolnki_27" title="Dev/Design/Offline files">Dev/Design/Offline_files</a>
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
@@ -1392,7 +1392,7 @@
         (fix) References: Follow attribute should be supported {detected by Schnark}. See: <a href="http://de.wikisource.org/wiki/Die_Trunksucht" rel="nofollow" class="external free">http://de.wikisource.org/wiki/Die_Trunksucht</a>
       </li>
       <li>
-        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import">Options/Import</a>
+        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         (fix) Import: Total article count should not include redirects for sqlite.
@@ -1491,7 +1491,7 @@
     </p>
     <ul>
       <li>
-        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import">Options/Import</a>
+        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
@@ -1688,7 +1688,7 @@
         (fix) Search: Search broken when not using search suggestions {detected by hidp123;anonymous7}.
       </li>
       <li>
-        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest">Options/Search_suggest</a>
+        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
       </li>
       <li>
         (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
@@ -1734,7 +1734,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest">Options/Search_suggest</a>
+        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
       </li>
       <li>
         (fix) Xtn/Lst: Lst handles recursive {{#lst}} calls; EX:http://it.wikisource.org {detected by Joe Webber}. See: <a href="http://it.wikisource.org" rel="nofollow" class="external free">http://it.wikisource.org</a>
@@ -1811,7 +1811,7 @@
     </p>
     <ul>
       <li>
-        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import">Options/Import</a>
+        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2016,7 +2016,7 @@
         (fix) syntaxhighlight and math tags should not allow raw javascript {detected by Schnark}
       </li>
       <li>
-        (add) Option to disable Javascript See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_51" title="Options">Options</a>
+        (add) Option to disable Javascript See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_51" title="Options" class="xowa-visited">Options</a>
       </li>
       <li>
         (add) Categories now display in MediaWiki format (Subcategories; Pages; Files); EX:http://en.wikipedia.org/wiki/Category:Terrestrial_planets {requested by Schnark}
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
@@ -2285,7 +2285,7 @@
         (add) Option for content application paths {requested by Miles} See <a href="http://xowa.org/home/wiki/Options/Apps.html" id="xolnki_55" title="Options/Apps">Options/Apps</a>
       </li>
       <li>
-        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import">Options/Import</a>
+        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
