--- a/home/wiki/Diagnostics/Scribunto/All.html
+++ b/home/wiki/Diagnostics/Scribunto/All.html
@@ -27,7 +27,7 @@
     </h2>
     <ul>
       <li>
-        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Basic.html" id="xolnki_2" title="Module:Diagnostics/Basic" class="xowa-visited">Module:Diagnostics/Basic</a>
+        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Basic.html" id="xolnki_2" title="Module:Diagnostics/Basic">Module:Diagnostics/Basic</a>
       </li>
       <li>
         Tests basic Scribunto functionality
@@ -88,7 +88,7 @@
         Calls code in 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Module:Diagnostics/LuaCommon.html" id="xolnki_3" title="Module:Diagnostics/LuaCommon" class="xowa-visited">Module:Diagnostics/LuaCommon</a>
+            <a href="http://xowa.org/home/wiki/Module:Diagnostics/LuaCommon.html" id="xolnki_3" title="Module:Diagnostics/LuaCommon">Module:Diagnostics/LuaCommon</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Template:Diagnostics/LuaCommon/getFrameTitle_parent.html" id="xolnki_4" title="Template:Diagnostics/LuaCommon/getFrameTitle parent">Template:Diagnostics/LuaCommon/getFrameTitle parent</a>
