--- a/home/wiki/Diagnostics/Section_edit.html
+++ b/home/wiki/Diagnostics/Section_edit.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>App/Xtn/Mediawiki/Math/Latex/Windows - XOWA</title>
+  <title>Diagnostics/Section edit - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,81 +11,116 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>App/Xtn/Mediawiki/Math/Latex/Windows</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Diagnostics/Section edit</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <p>
-      LaT<sub>E</sub>X is not natively available to Windows. Fortunately, <a href="http://miktex.org/" rel="nofollow" class="external text">MiKT<sub>E</sub>X</a> is open-source and distributed under <a href="http://miktex.org/copying" rel="nofollow" class="external text">Free Software Guidelines</a>.
+      Lead section para
     </p>
+    <div id="toc" class="toc">
+      <div id="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#Text"><span class="tocnumber">1</span> <span class="toctext">Text</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-2">
+          <a href="#Text_2"><span class="tocnumber">2</span> <span class="toctext">Text</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#Covering"><span class="tocnumber">3</span> <span class="toctext">Covering</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-4">
+              <a href="#UTF8:_.E6.97.A5.E6.9C.AC.E8.AA.9E.E3.83.86.E3.82.B9.E3.83.88"><span class="tocnumber">3.1</span> <span class="toctext">UTF8: 日本語テスト</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-5">
+              <a href="#Well-formed_HTML"><span class="tocnumber">3.2</span> <span class="toctext"><i>Well-formed HTML</i></span></a>
+            </li>
+            <li class="toclevel-2 tocsection-6">
+              <a href="#Malformed_HTML"><span class="tocnumber">3.3</span> <span class="toctext">Malformed HTML</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Math:_.5Cdelta"><span class="tocnumber">3.4</span> <span class="toctext">Math: \delta</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#Template"><span class="tocnumber">3.5</span> <span class="toctext"><i>Template</i></span></a>
+            </li>
+            <li class="toclevel-2 tocsection-9">
+              <a href="#UTF8:_.E6.97.A5.E6.9C.AC.E8.AA.9E.E3.83.86.E3.82.B9.E3.83.88_Well-formed_HTML_Malformed_HTML_Math:_.5Cdelta_Template"><span class="tocnumber">3.6</span> <span class="toctext">UTF8: 日本語テスト <i>Well-formed HTML</i> Malformed HTML Math: \delta <i>Template</i></span></a>
+            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-10">
+          <a href="#Transcluded_header_1"><span class="tocnumber">4</span> <span class="toctext">Transcluded header 1</span></a>
+        </li>
+      </ul>
+    </div>
     <h2>
-      <span class="mw-headline" id="Manual:_download">Manual: download</span>
+      <span class="mw-headline" id="Text">Text</span>
     </h2>
-    <ul>
-      <li>
-        Navigate to <a href="http://mirror.unl.edu/ctan/systems/win32/miktex/setup/" rel="nofollow" class="external free">http://mirror.unl.edu/ctan/systems/win32/miktex/setup/</a>
-      </li>
-      <li>
-        Download <b>miktex-portable.exe</b>
-      </li>
-      <li>
-        Launch the exe. Choose an installation directory of <b>C:\xowa\bin\windows\miktex\</b>. When you are done, you should have a file called <b>C:\xowa\bin\windows\miktex\miktex\bin\latex.exe</b>
-      </li>
-    </ul>
     <p>
-      Note that you may receive some prompts along the way
+      Text para
     </p>
-    <ul>
-      <li>
-        Paper size should be left to a4, else some images may wrap.
-      </li>
-      <li>
-        Under MiKTeX Settings, choose Refresh FNDB, else errors when generating other dvi
-      </li>
-    </ul>
     <h2>
-      <span class="mw-headline" id="Manual:_options">Manual: options</span>
+      <span class="mw-headline" id="Text_2">Text</span>
     </h2>
     <p>
-      The math module uses MathJax by default. You can change it to LaT<sub>E</sub>X by navigating to <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_2" title="Options/Math" class="xowa-visited">Options/Math</a> and choosing LaTeX
+      Text para dupe
     </p>
     <h2>
-      <span class="mw-headline" id="Testing">Testing</span>
+      <span class="mw-headline" id="Covering">Covering</span>
     </h2>
-    <ul>
-      <li>
-        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_3" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
-      </li>
-      <li>
-        Wait a few seconds. You will get a MikTeX prompt to download another repository. Specifically:
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <dl>
-          <dd>
-            <code>The package will be installed from: &lt;Random package repository&gt;</code>
-          </dd>
-          <dd>
-            <code>The package will be installed for: &lt;your_user_name&gt;</code>
-          </dd>
-        </dl>
-      </dd>
-      <dd>
-        Accept the defaults and press Install
-      </dd>
-      <dd>
-        This should be the only other download request when using MikTeX.
-      </dd>
-      <dd>
-        Note that the first request may take a full minute to process and there will be no progress indicator.
-      </dd>
-      <dd>
-        Note also that this message box may disrupt dynamic math updates. You will need to manually refresh the page in order to see the math image. This manual refresh is only needed for the first page; future pages will automatically update images dynamically.
-      </dd>
-    </dl>
+    <p>
+      Covering para
+    </p>
+    <h3>
+      <span class="mw-headline" id="UTF8:_.E6.97.A5.E6.9C.AC.E8.AA.9E.E3.83.86.E3.82.B9.E3.83.88">UTF8: 日本語テスト</span>
+    </h3>
+    <p>
+      UTF8 para
+    </p>
+    <h3>
+      <span class="mw-headline" id="Well-formed_HTML"><i>Well-formed HTML</i></span>
+    </h3>
+    <p>
+      Html para
+    </p>
+    <h3>
+      <span class="mw-headline" id="Malformed_HTML"><span style="color:green">Malformed HTML</span></span>
+    </h3>
+    <p>
+      Malformed HTML
+    </p>
+    <h3>
+      <span class="mw-headline" id="Math:_.5Cdelta">Math: <span id='xowa_math_txt_0'>\delta</span></span>
+    </h3>
+    <p>
+      Math para
+    </p>
+    <h3>
+      <span class="mw-headline" id="Template"><i>Template</i></span>
+    </h3>
+    <p>
+      Template para
+    </p>
+    <h3>
+      <span class="mw-headline" id="UTF8:_.E6.97.A5.E6.9C.AC.E8.AA.9E.E3.83.86.E3.82.B9.E3.83.88_Well-formed_HTML_Malformed_HTML_Math:_.5Cdelta_Template">UTF8: 日本語テスト <i>Well-formed HTML</i> <span style="color:green">Malformed HTML <span>Math: <span id='xowa_math_txt_0'>\delta</span> <i>Template</i></span></span></span>
+    </h3>
+    <p>
+      Combined para
+    </p>
+    <h2>
+      <span class="mw-headline" id="Transcluded_header_1">Transcluded header 1</span>
+    </h2>
+    <p>
+      Transcluded para 1 (will fail when trying to edit by section only)
+    </p>
   
     </div>
   </div>
