--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -328,7 +328,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language">Language</a>
+              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language" class="xowa-visited">Language</a>
             </td>
             <td>
               UI Language
@@ -336,7 +336,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs">Tabs</a>
+              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs" class="xowa-visited">Tabs</a>
             </td>
             <td>
               Tab appearance and behavior
@@ -344,7 +344,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Startup.html" id="xolnki_5" title="Options/Startup">Startup</a>
+              <a href="http://xowa.org/home/wiki/Options/Startup.html" id="xolnki_5" title="Options/Startup" class="xowa-visited">Startup</a>
             </td>
             <td>
               Application startup options
@@ -365,7 +365,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_7" title="Options/Scripting">Scripting</a>
+              <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_7" title="Options/Scripting" class="xowa-visited">Scripting</a>
             </td>
             <td>
               Add scripts to customize the page
@@ -373,7 +373,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts">Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts" class="xowa-visited">Shortcuts</a>
             </td>
             <td>
               Keyboard shortcuts
@@ -381,7 +381,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_9" title="Options/Menus">Menus</a>
+              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_9" title="Options/Menus" class="xowa-visited">Menus</a>
             </td>
             <td>
               Change the menu bar or right-click menu
@@ -402,7 +402,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_11" title="Options/Import">Import</a>
+              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_11" title="Options/Import" class="xowa-visited">Import</a>
             </td>
             <td>
               Import options
@@ -434,7 +434,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category" class="xowa-visited">Category</a>
             </td>
             <td>
               Category options
@@ -455,7 +455,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML" class="xowa-visited">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -463,7 +463,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML">Wiki</a>
+              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML" class="xowa-visited">Wiki</a>
             </td>
             <td>
               Miscellaneous wiki HTML options
@@ -471,7 +471,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_19" title="Options/HTML Tidy">Tidy</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_19" title="Options/HTML Tidy" class="xowa-visited">Tidy</a>
             </td>
             <td>
               HTML Tidy options
@@ -484,7 +484,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_20" title="Options/Content apps">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_20" title="Options/Content apps" class="xowa-visited">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
@@ -500,7 +500,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_22" title="Options/HTTP server">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_22" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -513,7 +513,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Search suggest</a>
+              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest" class="xowa-visited">Search suggest</a>
             </td>
             <td>
               Search suggest options (controls behavior in the search box)
@@ -542,7 +542,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_26" title="Options/Math">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_26" title="Options/Math" class="xowa-visited">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -579,7 +579,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_30" title="Options/Dev">Dev</a>
+              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_30" title="Options/Dev" class="xowa-visited">Dev</a>
             </td>
             <td>
               Developer options
