--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2017-01-02</b> 2016-12 English Wikipedia release. Also, 2016-12 Italian and Swahili wikis<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_itwiki_latest" class="external text" rel="nofollow">Italian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_swwiki_latest" class="external text" rel="nofollow">Swahili wikis</a>
+    </li>
+  </ul>
+
   <b>2016-12-04</b> 2016-11 Dutch and Russian wikis released. Also, 2016-11 German Wikipedia <br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">Dutch wikis</a>
