update android apk link

--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -308,7 +308,7 @@
           </div>
           <div class='xocfg_itm_data'>
 <textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
-home/wiki/Diagnostics
+home/wiki/Help/Download_XOWA
 </textarea>
           </div><input type='hidden' id='xowa.app.startup.tabs.previous_list__key_box' value='xowa.app.startup.tabs.previous_list'> <input type='hidden' id='xowa.app.startup.tabs.previous_list__ctx_box' value='app'>
         </div>
