update android apk link again

--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_android_v3.11.2.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.0.0.1701/xowa_app_android_v3.12.2.1.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
